--- a/WeCare/package.json
+++ b/WeCare/package.json
@@ -15,7 +15,10 @@
     "@supabase/supabase-js": "^2.0.0",
     "aes-js": "^3.1.2",
     "expo": "~50.0.13",
+    "expo-constants": "~15.4.5",
+    "expo-device": "~5.9.3",
     "expo-image-picker": "^14.7.1",
+    "expo-notifications": "~0.27.6",
     "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "native-notify": "^4.0.0",
@@ -29,10 +32,7 @@
     "react-native-screens": "~3.29.0",
     "react-native-url-polyfill": "^2.0.0",
     "styled-components": "^6.1.8",
-    "typescript": "^5.3.0",
-    "expo-device": "~5.9.3",
-    "expo-notifications": "~0.27.6",
-    "expo-constants": "~15.4.5"
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
