--- a/WeCare/package.json
+++ b/WeCare/package.json
@@ -24,12 +24,17 @@
     "native-notify": "^4.0.0",
     "react": "18.2.0",
     "react-native": "^0.73.6",
+    "react-native-accurate-step-counter": "^2.0.4",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-get-random-values": "^1.8.0",
+    "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-sensors": "^7.3.6",
+    "react-native-shake": "^5.6.2",
+    "react-native-svg": "^15.1.0",
     "react-native-url-polyfill": "^2.0.0",
     "styled-components": "^6.1.8",
     "typescript": "^5.3.0"
