--- a/WeCare/package.json
+++ b/WeCare/package.json
@@ -19,6 +19,7 @@
     "expo-constants": "~15.4.5",
     "expo-device": "~5.9.3",
     "expo-image-picker": "^14.7.1",
+    "expo-linear-gradient": "^12.7.2",
     "expo-notifications": "~0.27.6",
     "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
