--- a/WeCare/package.json
+++ b/WeCare/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/datetimepicker": "^7.6.3",
     "@react-native-picker/picker": "^2.7.2",
+    "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@supabase/supabase-js": "^2.0.0",
@@ -29,6 +30,7 @@
     "react-native": "^0.73.6",
     "react-native-accurate-step-counter": "^2.0.4",
     "react-native-calendar-picker": "^8.0.2",
+    "react-native-circular-progress": "^1.3.9",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-get-random-values": "^1.8.0",
