--- a/WeCare/package.json
+++ b/WeCare/package.json
@@ -22,7 +22,7 @@
     "expo-device": "~5.9.3",
     "expo-image-picker": "^14.7.1",
     "expo-linear-gradient": "^12.7.2",
-    "expo-notifications": "~0.27.6",
+    "expo-notifications": "^0.27.6",
     "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "native-notify": "^4.0.0",
@@ -34,7 +34,9 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-get-random-values": "^1.8.0",
+    "react-native-notifications": "^5.1.0",
     "react-native-paper": "^5.12.3",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
