--- a/WeCare/package.json
+++ b/WeCare/package.json
@@ -31,6 +31,7 @@
     "react-native": "^0.73.6",
     "react-native-accurate-step-counter": "^2.0.4",
     "react-native-calendar-picker": "^8.0.2",
+    "react-native-calendars": "^1.1304.1",
     "react-native-circular-progress": "^1.3.9",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
