--- a/WeCare/package.json
+++ b/WeCare/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^6.3.29",
     "@supabase/supabase-js": "^2.0.0",
     "aes-js": "^3.1.2",
+    "axios": "^1.6.8",
     "expo": "~50.0.13",
     "expo-constants": "~15.4.5",
     "expo-device": "~5.9.3",
@@ -44,6 +45,7 @@
     "react-native-screens": "~3.29.0",
     "react-native-sensors": "^7.3.6",
     "react-native-shake": "^5.6.2",
+    "react-native-share": "^10.1.0",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^14.1.0",
     "react-native-url-polyfill": "^2.0.0",
