--- a/WeCare/package.json
+++ b/WeCare/package.json
@@ -38,6 +38,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-get-random-values": "^1.8.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-notifications": "^5.1.0",
     "react-native-paper": "^5.12.3",
     "react-native-push-notification": "^8.1.1",
