--- a/WeCare/package.json
+++ b/WeCare/package.json
@@ -45,6 +45,7 @@
     "react-native-paper": "^5.12.3",
     "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "~3.6.2",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-sensors": "^7.3.6",
